--- a/README.textile
+++ b/README.textile
@@ -20,3 +20,7 @@ Second, add the following code in app_controller.php.
 Click icon.
 
 !http://github.com/k1LoW/viewpath/raw/master/snap.png!
+
+h2. Requirement
+
+jQuery
